--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 
 language: python
 python:
-  - "2.7"
+  - "3.5"
 
 # TODO: add these steps to
 #   https://github.com/travis-ci/docs-travis-ci-com/blob/gh-pages/user/gui-and-headless-browsers.md
@@ -11,22 +11,39 @@ services:
   - docker
 
 env:
-  - SEL_IMG_TAG=latest SEL_PORT=24444
+  - CONT=grid SEL_IMG_TAG=latest SEL_HOST=localhost SEL_PORT=24444
 
+# When I try to map ports `-p ${SEL_PORT}:${SEL_PORT}` I get
+#   Error response from daemon: Cannot start container 9da9d7a1176: iptables
+#   failed: iptables --wait -t filter -A DOCKER ! -i docker0 -o docker0
+#   -p tcp -d 172.17.0.1 --dport 24444 -j ACCEPT:
+#   iptables: No chain/target/match by that name. (exit status 1)
+# To avoid `Unable to locate package jq` 1st is necessary to `apt-get update`
 before_install:
-- echo "tag:${SEL_IMG_TAG} port:${SEL_PORT}"
-- docker pull elgalu/selenium:${SEL_IMG_TAG}
-- docker run --name=grid -d elgalu/selenium:${SEL_IMG_TAG}
-- docker images
-- docker ps -a
+  - sudo apt-get update -qqy
+  - sudo apt-get install -qqy jq
+  - docker pull elgalu/selenium:${SEL_IMG_TAG}
+  - docker run --name=${CONT} -d elgalu/selenium:${SEL_IMG_TAG}
+  - docker images
+  - docker ps -a
+  - sleep 5
+  - docker logs ${CONT}
+  - docker exec ${CONT} errors || true
+  - docker exec ${CONT} wait_all_done 10s || true
+  - docker exec ${CONT} errors || true
+  - docker inspect -f='{{.NetworkSettings.IPAddress}}' ${CONT}
+  - export SEL_HOST=$(docker inspect -f='{{.NetworkSettings.IPAddress}}' ${CONT})
+  - export SEL_STATUS_URL="http://${SEL_HOST}:${SEL_PORT}/wd/hub/status"
+  - echo "${SEL_STATUS_URL}"
+  - curl "${SEL_STATUS_URL}" | jq '.state'
 
 install:
-- pip install --upgrade -r requirements.txt
+  - pip install --upgrade -r requirements.txt
 
 script:
-- export SEL_HOST=$(docker inspect -f='{{.NetworkSettings.IPAddress}}' grid)
-- python hola.py
+  - echo "${SEL_STATUS_URL}"
+  - SEL_HOST=localhost python hola.py
 
 after_script:
-- docker stop grid
-- docker rm grid
+  - docker stop ${CONT}
+  - docker rm ${CONT}
