--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ python:
 services:
   - docker
 
+# Difference from selenium-test-dockerized, will pull
+#   SEL_TEST_IMG_TAG=latest instead of building locally
 env:
-  - CONT=grid SEL_IMG_TAG=latest SEL_HOST=127.0.0.1 SEL_PORT=24444
+  - SEL_IMG_TAG=latest SEL_TEST_IMG_TAG=latest
 
 # When I try to map ports `-p ${SEL_PORT}:${SEL_PORT}` I get
 #   Error response from daemon: Cannot start container 9da9d7a1176: iptables
@@ -19,31 +21,27 @@ env:
 #   -p tcp -d 172.17.0.1 --dport 24444 -j ACCEPT:
 #   iptables: No chain/target/match by that name. (exit status 1)
 # To avoid `Unable to locate package jq` 1st is necessary to `apt-get update`
+# Difference from selenium-test-dockerized, will pull
+#   SEL_TEST_IMG_TAG=latest instead of building locally
 before_install:
-  - sudo apt-get update -qqy
-  - sudo apt-get install -qqy jq
+  - docker pull elgalu/selenium-test:${SEL_TEST_IMG_TAG}
   - docker pull elgalu/selenium:${SEL_IMG_TAG}
-  - docker run --name=${CONT} -d -p 127.0.0.1:80:24444 elgalu/selenium:${SEL_IMG_TAG}
-  - docker images
-  - docker ps -a
-  - sleep 5
-  - docker logs ${CONT}
-  - docker exec ${CONT} errors || true
-  - docker exec ${CONT} wait_all_done 10s || true
-  - docker exec ${CONT} errors || true
-  - docker inspect -f='{{.NetworkSettings.IPAddress}}' ${CONT}
-  - export SEL_HOST=$(docker inspect -f='{{.NetworkSettings.IPAddress}}' ${CONT})
-  - export SEL_STATUS_URL="http://${SEL_HOST}:${SEL_PORT}/wd/hub/status"
-  - echo "${SEL_STATUS_URL}"
-  - curl "${SEL_STATUS_URL}" | jq '.state'
 
+# If we don't increase MAX_INSTANCES and MAX_SESSIONS we get
+#   Error forwarding the new session Empty pool of VM for setup Capabilities
 install:
-  - pip install --upgrade -r requirements.txt
+  - docker run --privileged --name=myselenium -d -e MAX_INSTANCES=9 -e MAX_SESSIONS=9 elgalu/selenium:${SEL_IMG_TAG}
+  - docker exec myselenium wait_all_done 15s || true
+  - docker exec myselenium errors || true
+  - docker logs myselenium
 
+# If we try to use `--net` Travis fails with System error: permission denied
+# If we try to use `--link` Selenium fails with ConnectionRefusedError after
+#  connect to selenium at http://172.17.0.4:24444/wd/hub
+# Unless, we use `--privileged` trick by Hiro Asari from Travis Corp.
 script:
-  - echo "${SEL_STATUS_URL}"
-  - SEL_HOST=127.0.0.1 SEL_PORT=80 python hola.py
+  - docker run --privileged --rm -ti --name=mytest --link myselenium:sel elgalu/selenium-test:${SEL_TEST_IMG_TAG}
 
 after_script:
-  - docker stop ${CONT}
-  - docker rm ${CONT}
+  - docker stop myselenium
+  - docker rm myselenium
