--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - docker pull elgalu/selenium:${SEL_IMG_TAG}
 
 install:
-  - docker run --privileged --name=myselenium -d elgalu/selenium:${SEL_IMG_TAG}
+  - docker run --privileged --name=myselenium -d -e VIDEO=true elgalu/selenium:${SEL_IMG_TAG}
   - docker exec myselenium wait_all_done 15s || true
   - docker exec myselenium errors || true
   - docker logs myselenium
